@@ -28,30 +28,43 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:3.0.4.RELEASE'
-	// Spring Data JPA (必要に応じて追加)
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	// Validation (必要に応じて追加)
+
+	// Validation
 	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
 	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
+
 	compileOnly 'org.projectlombok:lombok'
-	// MySQL Connector/J (バージョンを明示的に指定)
+
+	// MySQL Connector/J
 	runtimeOnly 'com.mysql:mysql-connector-j:8.3.0'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	// JUnit Jupiter API (テストコードのコンパイルと実行に必要)
+	// JUnit Jupiter API
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
 
-	// JUnit Platform Launcher (テスト実行に必要)
+	// JUnit Platform Launcher
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.0'
 
 	// Spring Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-crypto'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+	options.compilerArgs += ["--enable-preview"]
+}
+
+tasks.withType(Test) {
+	jvmArgs += ["--enable-preview"]
 }
